syntax = "proto3";

package io.confluent.devx.model;

enum CostType {
  PAY_PER_IMPRESSION = 0;
  PAY_PER_CLICK = 1;
}

message Campaign {
  string id = 1;
  string advertiserId = 2;
  string productId = 3;
  string costType = 4;
  double cost = 5;
}

