syntax = "proto3";

import "google/protobuf/timestamp.proto";

package io.confluent.devx.model;

message Click {

  string id = 1;
  string deviceId = 2;
  string campaignId = 3;
  string impressionId = 4;
  google.protobuf.Timestamp timestamp = 5;
}